# lectura-modules

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MEMO-AUDIT.md  MODEL_LICENCE.md  README.md  construire_wheels.py  exporter.py  pyproject.toml
Aligneur/: README.md  demo_cli.py  pyproject.toml
Aligneur/exemples/: exemple_basique.py
Aligneur/tests/: test_formules_surlignage.py
CTC/: README.md  pyproject.toml
Correcteur/: LICENCE.txt  PLAN.md  README.md  fp_roman.tsv  pyproject.toml
Correcteur/benchmark/: analyze_fn.py  benchmark_correcteurs.py  benchmark_resultats.json  comparaison.json  rapport_v1.1.md
Correcteur/data/: grammaire_wicopaco.tsv  negatif_wicopaco.tsv
Correcteur/docs/: diagnostic_pos_morpho.md
Correcteur/scripts/: _analyse_conj_cat_e.py  _analyse_conj_manquees.py  _analyse_g2p_par_erreur.py  _analyse_ngram_par_erreur.py  _analyse_ngram_wicopaco.py  _bench_analyse_gram.py  _bench_complet.py  _bench_correcteur_v2.py  _bench_etiquetage.py  _bench_g2p_wicopaco.py  _bench_gender_nom.py  _bench_hybride.py  _bench_p2g_orthowords.py  _bench_stabilite_g2p_p2g.py  _bench_tagging_complet.py  _bench_tagging_g2p_vs_p2g.py  _bench_v1_v2_v3.py  _debug_conj_pronom.py  _debug_formes_de.py  _diag_fp.py  _diag_fp2.py  _diag_fp3.py  _diag_fp4.py  _diag_fp5.py  _diag_wicopaco_fn.py  _diag_wicopaco_patterns.py  _diagnostic_complet.py  _eval_pipeline_pos.py  _eval_pos_phrases_erronees.py  _eval_pos_qualite.py  _investigate_fp.py  _proto_analyse_gram.py  analyse_fn.py  analyse_fp_oov.py  analyser_fn_grammaire.py  analyser_fp_negatif.py  analyze_acc_fn.py  analyze_pp_fn.py  bench_fp_roman.py  bench_p2g_morpho.py  (+19 more)
Correcteur/tests/: conftest.py  corpus_evaluation.py  test_azerty.py  test_candidats.py  test_coherence.py  test_correcteur.py  test_language_model.py  test_modele_editeur.py  test_morpho.py  test_phones.py  test_retag.py  test_scoring.py  test_symspell.py  test_tags.py  test_types.py
Decodeur/: CHANGELOG.md  README.md  pyproject.toml
Decodeur/tests/: test_ctc.py
Diphone/: LICENCE-COMMERCIALE.md  README.md  pyproject.toml  test_corpus_groundtruth.py  test_corpus_regen.py  test_hifigan_retimbre.py  test_ov_batch.py  test_ov_sr_trick.py  test_prosody_v2.py
Diphone/tests/: test_g2p.py
Exporter/: pyproject.toml
Exporter/tests/: test_timing.py  test_wav.py
Formules/: README.md  pyproject.toml  setup.py
Formules/tests/: test_complet.py  test_lecture_formules.py  test_reconnaissance.py  test_romains.py  test_tables.py
G2P/: CHANGELOG.md  LICENCE-COMMERCIALE.md  LICENCE.txt  README.md  demo_cli.py  pyproject.toml
G2P-Pipeline/: README.md  pyproject.toml
G2P/entrainement/: README.md  construire_table_corrections.py  entrainer.py  evaluer.py  evaluer_mots_isoles.py  exporter.py  preparer_donnees.py
G2P/evaluation/: corrections_candidates.json  croisement_contexte_isolation.md  g2p_mots_isoles_complet.md  g2p_mots_isoles_unifie.md
G2P/exemples/: exemple_basique.py  exemple_integration.py
G2P/modeles/: unifie_int8.onnx
G2P/scripts/: eval_homographes.py
G2P/tests/: test_inference.py  test_integration.py  test_modele.py  test_pipeline_formules.py
Lexique/: README.md  lexique_lectura.db  pyproject.toml
Lexique/LexiqueCSV/: build_csv.py
Lexique/scripts/: construire_bdd.py  phonetiser_noms_propres.py
Lexique/tests/: conftest.py  test_aliases.py  test_lexique.py  test_loaders.py  test_morphologie.py  test_multext.py  test_phonetique.py  test_protocol.py  test_recherche.py  test_semantique.py  test_v4.py  test_v5.py
Monospeaker/: LICENCE.txt  README.md  demo_cli.py  pyproject.toml
Monospeaker/tests/: test_chargeur.py  test_crypto.py  test_enhance.py  test_inference.py  test_integration.py  test_phonemes.py
MultiSpeaker/: .gitignore  README.md  pyproject.toml
MultiSpeaker/scripts/: build_private.py
MultiSpeaker/tests/: test_chargeur.py  test_inference.py  test_integration.py  test_phonemes.py
P2G/: ATTRIBUTION.md  CHANGELOG.md  LICENCE.txt  README.md  demo_cli.py  pyproject.toml
P2G-Pipeline/: README.md  pyproject.toml
P2G-Pipeline/scripts/: analyser_composes.py  analyser_fusions.py  analyser_fusions_v2.py  benchmark_fusion.py  extraire_entites.py
P2G/demo/: demo.py
P2G/entrainement/: entrainer.py  evaluer.py  evaluer_comparatif.py  exporter.py  preparer_donnees.py
P2G/modeles/: metrics_p2g_test.json  unifie_p2g_int8.onnx  unifie_p2g_v2_vocab.json  unifie_p2g_vocab.json
P2G/tests/: test_homophones.py  test_modele.py
Phonemiseur/: ATTRIBUTION.md  CHANGELOG.md  EVALUATION.md  README.md  demo_cli.py  pyproject.toml
Phonemiseur/exemples/: exemple_basique.py  exemple_integration.py
Phonemiseur/scripts/: generer_corrections_lexique.py
Phonemiseur/tests/: test_inference.py  test_integration.py  test_modele.py  test_pipeline_formules.py
Pseudo-ortho/: LICENCE.txt  README.md  demo_cli.py  lectura_pseudo_ortho.py  pyproject.toml
STT/: CHANGELOG.md  README.md  pyproject.toml
STT-Formules/: README.md  pyproject.toml
STT-Formules/scripts/: generate_corpus.py
STT-Formules/tests/: test_dataset.py  test_inference.py  test_model.py  test_tokenizer.py  test_vocab.py
STT-Formules/training/: __init__.py  dataset.py  export_onnx.py  model.py  train.py
STT/tests/: test_stt.py
Syllabeur/: LICENCE-COMMERCIALE.md  README.md  demo_cli.py  pyproject.toml
Syllabeur/exemples/: exemple_basique.py
Syllabeur/tests/: test_formules_surlignage.py
TTS/: pyproject.toml
TTS-Dipho/: pyproject.toml
TTS-Diphone/: README.md  pyproject.toml  test_ab_fujisaki.py  test_prosodie_ab.py  test_v9_v10_v11.py  test_v9_vs_v10.py
TTS-Diphone/tests/: test_compression.py  test_engine.py  test_g2p.py  test_phonemes.py
TTS-Mono/: README.md  pyproject.toml
TTS-Monospeaker/: LICENCE.txt  README.md  pyproject.toml
TTS-Monospeaker/exemples/: exemple_usage.py
TTS-Monospeaker/scripts/: build_private.py
TTS-Multi/: README.md  pyproject.toml
TTS-MultiSpeaker/: pyproject.toml
Tokeniseur/: README.md  demo_cli.py  pyproject.toml
VC-Locuteurs/: README.md  pyproject.toml
VC-Locuteurs/tests/: test_engine.py  (+2 more)
VC-ZeroShot/: README.md  pyproject.toml
(+691 files in other folders)
