[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura"
version = "2.0.0"
description = "Suite complète de traitement linguistique du français — tokenisation, phonémisation, alignement, syllabation, formules, lexique"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "contact@lec-tu-ra.com"}]
keywords = ["nlp", "french", "g2p", "aligneur", "syllabeur", "tokeniseur", "phonétique"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "lectura-tokeniseur>=2.2",
    "lectura-g2p>=2.0",
    "lectura-p2g>=2.0",
    "lectura-aligneur>=3.0",
    "lectura-formules>=3.0",
    "lectura-lexique>=1.3",
]

[project.optional-dependencies]
onnx = [
    "lectura-g2p[onnx]>=2.0",
    "lectura-p2g[onnx]>=2.0",
]

[project.urls]
Homepage = "https://www.lec-tu-ra.com/solutions/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools]
py-modules = []
