[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura"
version = "4.0.1"
description = "Meta-package Lectura — suite complete de traitement linguistique et vocal du francais"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "admin@lectura.world"}]
keywords = [
    "nlp", "french", "g2p", "p2g", "stt", "tts", "vc",
    "phonetics", "pipeline", "text-to-speech", "speech-to-text",
    "syllabification", "spell-checker", "grapheme-to-phoneme",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = []

[project.optional-dependencies]
# --- Briques outils ---
tokeniseur = ["lectura-tokeniseur>=2.2"]
formules = ["lectura-formules>=3.7"]
aligneur = ["lectura-aligneur>=4.0"]
lexique = ["lectura-lexique>=1.4"]
phonemiseur = ["lectura-phonemiseur>=4.0"]
graphemiseur = ["lectura-graphemiseur>=4.3"]
decodeur = ["lectura-decodeur>=3.0"]
monospeaker = ["lectura-monospeaker>=3.0"]
multispeaker = ["lectura-multispeaker>=3.0"]
diphone = ["lectura-diphone>=2.0"]
vc-zeroshot = ["lectura-vc-zeroshot>=1.1"]
vc-locuteurs = ["lectura-vc-locuteurs>=1.0"]

# --- Pipelines metiers ---
g2p = ["lectura-g2p>=4.1"]
p2g = ["lectura-p2g>=4.6"]
stt = ["lectura-stt>=3.2"]
tts-mono = ["lectura-tts-mono>=1.0"]
tts-multi = ["lectura-tts-multi>=1.0"]
tts-dipho = ["lectura-tts-dipho>=1.0"]
vc = ["lectura-vc-zeroshot>=1.1", "lectura-vc-locuteurs>=1.0"]

# --- Groupes de commodite ---
nlp = ["lectura[tokeniseur,formules,aligneur,lexique,phonemiseur,graphemiseur]"]
tts = ["lectura[tts-mono,tts-multi,tts-dipho]"]
onnx = [
    "lectura-phonemiseur[onnx]",
    "lectura-graphemiseur[onnx]",
    "lectura-decodeur[onnx]",
    "lectura-monospeaker[onnx]",
    "lectura-multispeaker[onnx]",
]
all = [
    "lectura[nlp,g2p,p2g,stt,tts,vc,onnx]",
    "lectura-diphone[local]",
]

[project.urls]
Homepage = "https://www.lectura.world/developpement/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools]
py-modules = []
