[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-correcteur"
version = "1.1.2"
description = "Correcteur orthographique et grammatical du francais — regles, homophones, accords, conjugaison, participes passes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "admin@lectura.world"}]
keywords = [
    "spell-checker", "grammar-checker", "french", "nlp",
    "spellcheck", "orthography", "grammar", "homophones",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
sqlite = ["lectura-lexique>=1.0"]
models = []
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://www.lectura.world/developpement/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/Correcteur"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts*", "benchmark*", "checkpoints*"]

[tool.setuptools.package-data]
lectura_correcteur = ["data/*.json", "data/*.json.gz", "data/*.db", "data/*.csv.gz", "data/g2p_v2/*.py", "data/g2p_v2/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
