[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-decodeur"
version = "3.0.0"
description = "Decodeur phonetique du francais — audio vers phones IPA structures (CNN-BiGRU-CTC)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "admin@lectura.world"}]
keywords = ["stt", "asr", "ctc", "french", "phonetic", "ipa", "decoder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16"]

[project.urls]
Homepage = "https://www.lectura.world/developpement/modules/outils/decodeur/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/Decodeur"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_decodeur = ["data/*.json"]
