[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-lexique"
version = "1.3.0"
description = "Module partage d'acces au lexique Lectura"
requires-python = ">=3.10"
license = "CC-BY-SA-4.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
