[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-multispeaker"
version = "4.0.1"
description = "French neural TTS multi-speaker — Conformer (high) or FastPitch (light), ONNX inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "admin@lectura.world"}]
keywords = [
    "tts", "french", "text-to-speech", "speech-synthesis", "onnx",
    "matcha-tts", "conformer", "multi-speaker", "fastpitch",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16", "numpy>=1.24"]

[project.urls]
Homepage = "https://www.lectura.world/developpement/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/MultiSpeaker"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_multispeaker = ["data/*.json", "modeles/*.json"]
