[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-p2g"
version = "4.5.2"
description = "Pipeline P2G complet du francais — Graphemiseur + Formules + Noms propres (IPA -> orthographe)"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "contact@lec-tu-ra.com"}]
keywords = ["p2g", "french", "nlp", "pipeline", "phonétique", "orthographe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "lectura-graphemiseur>=4.3",
    "lectura-formules>=3.6",
]

[project.urls]
Homepage = "https://www.lec-tu-ra.com/solutions/outils/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/P2G-Pipeline"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_p2g = ["data/entites.json", "data/p2g_corrections.json", "data/p2g_corrections_etendu.json"]
