[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lectura-p2g-unifie"
version = "1.0.0"
description = "Modèle unifié P2G + POS + Morpho pour le français (IPA → orthographe) — BiLSTM char-level multi-tête avec word feedback"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-SA-4.0"}
authors = [{name = "Lectura"}]
keywords = ["p2g", "french", "nlp", "phonétique", "orthographe", "pos-tagging", "morphologie"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16"]
numpy = ["numpy>=1.24"]
train = ["torch>=2.0", "onnx>=1.14", "onnxruntime>=1.16"]
all = ["onnxruntime>=1.16", "numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lectura_p2g = ["py.typed"]
