[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lectura-stt-formules"
version = "0.1.0"
description = "STT dedie formules — CTC semantique pour nombres, dates, heures, sigles (generateur de corpus)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Max Carriere", email = "admin@lectura.world"}]
keywords = ["stt", "asr", "ctc", "french", "formulas", "numbers", "dates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: French",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = ["lectura-formules>=3.7"]

[project.optional-dependencies]
corpus = ["lectura-tts-multispeaker>=1.3", "numpy>=1.24", "soundfile>=0.12"]
training = ["torch>=2.0", "torchaudio>=2.0", "soundfile>=0.12", "numpy>=1.24"]
export = ["torch>=2.0", "onnx>=1.14", "onnxruntime>=1.16"]
inference = ["onnxruntime>=1.16", "numpy>=1.24", "soundfile>=0.12"]

[project.urls]
Homepage = "https://www.lectura.world/solutions/outils/modules/"
Repository = "https://github.com/maxcarriere/lectura-modules/tree/main/STT-Formules"
Issues = "https://github.com/maxcarriere/lectura-modules/issues"

[tool.setuptools.packages.find]
where = ["src"]
